--- a/Text_Embedding_and_Similarity_Search_Toolkit.ipynb
+++ b/Text_Embedding_and_Similarity_Search_Toolkit.ipynb
@@ -19,7 +19,7 @@
       "outputs": [],
       "source": [
         "import os\n",
-        "os.environ[\"HUGGINGHUB_API_TOKEN\"] = \"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\"\n"
+        "os.environ[\"HUGGINGHUB_API_TOKEN\"] = \"     \"\n"
       ]
     },
     {
