--- a/process_and_model.ipynb
+++ b/process_and_model.ipynb
@@ -111,7 +111,7 @@
         "!pip install sentence_transformers\n",
         "\n",
         "import os\n",
-        "os.environ[\"HUGGINGHUB_API_TOKEN\"] = \"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\"\n"
+        "os.environ[\"HUGGINGHUB_API_TOKEN\"] = \"  \"\n"
       ]
     },
     {
@@ -391,7 +391,7 @@
         "\n",
         "import os\n",
         "\n",
-        "os.environ[\"HUGGINGFACEHUB_API_TOKEN\"] = \"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\"\n",
+        "os.environ[\"HUGGINGFACEHUB_API_TOKEN\"] = \" \"\n",
         "\n",
         "template = \"\"\"Question: {query}\n",
         "\n",
@@ -417,7 +417,7 @@
         "\n",
         "#import os\n",
         "\n",
-        "#HUGGINGFACEHUB_API_TOKEN = \"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\"\n",
+        "#HUGGINGFACEHUB_API_TOKEN = \" \"\n",
         "\n",
         "\n",
         "#llm = HuggingFaceHub(repo_id=\"google/flan x-5\",model_kwargs={\"temperature\":0,\"max_length\":512})"
